--- a/static/style.css
+++ b/static/style.css
@@ -24,11 +24,6 @@ header, footer {
     margin: 0;
 }
 
-p {
-    margin: 0;
-    padding: 0;
-}
-
 footer {
     top: auto;
     bottom: 0;
@@ -41,204 +36,41 @@ footer p {
 }
 
 .content {
-    height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-content: center;
     justify-content: center;
-}
-
-.forumContent, #userAdminContent {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;  
+    margin: 5rem auto 0;
+    width: 60rem;
 
 }
 
-
-#loginBox, #regoBox {
-    border-radius: 1rem;
-    width: 30rem;
-    height: 14rem;
-    margin: auto;
-    background-color: grey;
-    border: 1px solid black;
+.taskDesc {
+    width: 100%;
+    background-image: linear-gradient(#d4af37 80%, black);
+    color: black;
+    padding: 0;
+    border-radius: 0.5rem 0.5rem 0 0;
 }
 
-input {
-    text-align: center;
-}
-
-.loginForm, .regoForm, .loginRego, .postForm, .passwordChange {
-    display: grid;
-    grid-template-columns:17% 83%;
-    grid-column-gap: 1rem;
-    grid-row-gap: 0.35rem;
-    margin: 2rem 2rem 0;
-
-}
-
-.loginForm input, .regoForm input {
-    margin-right: 1rem;
-}
-
-.loginRego {
-    margin: 2rem 2.9rem 0 2rem;
-}
-
-.passwordChange {
-    grid-template-columns:40% 60%;
-}
-
-label {
-    font-weight: bold;
-    text-align: right;
-}
-
-.profileImg {
-    border-radius: 50%;
-    border: 1px solid grey;
-    max-width: 120px;
-    max-height: 120px;
-}
-
-.profileBlock {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-areas: 
-        'greeting profile'
-        'logout profile';
-    margin-top: 8rem;
-}
-
-.greeting {
-    grid-area: greeting;
-    
-}
-
-.profileImg, #userAdminImage {
-    grid-area: profile;
-}
-
-.logoutBtn, .passwordChange {
-    grid-area: logout;
-}
-
-#newMsgBlock, #editMsgBlock {
-    border: 1px solid #d4af37;
-    border-radius: 1rem;
-    min-width: 30rem;
-    width: 50rem;
-    padding: 2rem;
-}
-
-.postForm {
-    grid-template-columns:15% 85%;
-}
-
-.postForm input, textarea {
-    text-align: left;
-    vertical-align: top;
-    padding: 0.25rem 1rem;
-}
-
-#newMessage, #editPostMessage {
-    height: 10rem;
-}
-
-a:link, a:visited {
-    text-decoration: none;
-    color: #d4af37;
-}
-
-a:hover {
-    text-decoration: underline;
-    color: grey;
-}
-
-a:active {
-    color: white;
-}
-
-.postBlockHead, .postBlockBody {
-    min-width: 30rem;
-    width: 50rem;
-    padding: 1rem 2rem;
-}
-
-.postBlockHead {
-    display: grid;
-    grid-template-columns: 10% 90%;
-    grid-template-rows: 80% 20%;
-    grid-template-areas:
-        'image subject'
-        'user timestamp';
-    border-radius: 1rem 1rem 0 0;
-    background-image: linear-gradient(#d4af37, black);
-    color: white;
-}
-
-.postProfileImg {
-    grid-area: image;
-}
-
-.postUser {
-    grid-area: user;
-    text-align: center;
-    font-size: 0.75rem;
-    margin-right: 1rem;
-
-}
-
-.postSubject {
-    grid-area: subject;
-    text-align: left;
-    color: white;
-    font-size: 2rem;
+.taskDesc h2 {
+    padding: 0;
     margin: 0;
 }
 
-.postTime {
-    grid-area: timestamp;
-    text-align: left;
-    font-size: 0.75rem;
+p {
+    margin: 0;
+    padding: 0.5rem;
 }
 
-.postBlockBody {
-    max-height: fit-content;
-    min-height: 5rem;
-    text-align: left;
-    border-radius: 0 0 1rem 1rem;
-    margin-bottom: 0.25rem;
-    background-color: black;
+.task2_1 {
+    border: 1px solid #d4af37;
+    border-radius: 0.5rem;
+    margin-top: 2rem;
 }
 
-.postBlockBody p, .postImg {
-    padding-left: 5rem;
-    line-height: 2rem
-}
-
-.postProfileImg {
-    height: 60px;
-    width: 60px;
-    border-radius: 50%;
-}
-
-#userAdminImage {
-    height: 200px;
-    width: 200px;
-    border-radius: 50%;
-}
-
-#editPostSubject {
-    color: black;
-}
-
-#editPostTime {
-    text-align: left;
-}
-
-#editPostImg {
-    width: 3rem;
+#list2_1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: auto;
 }
