forgot to check variable names. fixed now

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,9 +53,9 @@
                     <tr>
                         <td>{{loop.index}}</td>
                         <td>{{ result['country'] }}</td>
-                        <td>{{ result['product_type'] }}</td>
-                        <td>{{ result['trade_deficit'] }}</td>
+                        <td>{{ result['product'] }}</td>
                         <td>{{ result['status'] }}</td>
+                        <td>{{ result['deficit'] }}</td>
                     </tr>
                 {% endfor %}
                 </table>
